--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
+    "@grammyjs/conversations": "^1.2.0",
     "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
     "bcrypt": "^5.0.1",
@@ -25,6 +26,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "elevenlabs": "^0.16.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "form-data": "^4.0.1",
