--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grammy": "^1.33.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
+    "jest-mock": "^29.7.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "openai": "^4.77.0",
@@ -40,6 +41,7 @@
     "replicate": "^0.32.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
+    "tslib": "^2.8.1",
     "typedi": "^0.10.0",
     "uuid": "^11.0.3",
     "winston": "^3.8.1",
@@ -77,7 +79,7 @@
     "pm2": "^5.2.0",
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.0.0",
