--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,18 +1,25 @@
-# NodeJS Version 16
-FROM node:16.18-buster-slim
+FROM node:20-alpine as builder
 
-# Copy Dir
-COPY . ./app
-
-# Work to Dir
 WORKDIR /app
+COPY package*.json ./
+RUN npm install
 
-# Install Node Package
-RUN npm install --legacy-peer-deps
+COPY . .
+RUN npm run build
 
-# Set Env
-ENV NODE_ENV production
+FROM node:20-alpine
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --production
+
+COPY --from=builder /app/dist ./dist
+COPY .env.production.local .
+
+RUN mkdir -p /app/logs && \
+    chown -R node:node /app/logs
+
+USER node
 EXPOSE 3000
 
-# Cmd script
-CMD ["npm", "run", "start"]
+CMD ["node", "dist/server.js"]
