--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,11 @@
 version: "3.9"
 
 services:
-  proxy:
-    container_name: proxy
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    restart: "unless-stopped"
-    networks:
-      - backend
-
   server:
-    container_name: server
+    container_name: ai-server-express
     build:
       context: ./
+      target: production
       dockerfile: Dockerfile.prod
     ports:
       - "3000:3000"
@@ -26,6 +16,19 @@ services:
       - PORT=3000
       - LOG_DIR=/app/logs
     restart: 'unless-stopped'
+    networks:
+      - backend
+
+  nginx:
+    container_name: nginx-proxy
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - server
+    restart: "unless-stopped"
     networks:
       - backend
 
