--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,23 @@
 version: "3.9"
 
 services:
-  server:
+  proxy:
+    container_name: proxy
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app
+    restart: "unless-stopped"
+    networks:
+      - backend
+
+  app:
     container_name: ai-server-express
     build:
       context: ./
-      target: production
       dockerfile: Dockerfile.prod
     ports:
       - "3000:3000"
@@ -15,20 +27,11 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - LOG_DIR=/app/logs
+      - SECRET_KEY=secretKey
+      - CREDENTIALS=true
+      - ORIGIN=*
+      - LOG_FORMAT=combined
     restart: 'unless-stopped'
-    networks:
-      - backend
-
-  nginx:
-    container_name: nginx-proxy
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - server
-    restart: "unless-stopped"
     networks:
       - backend
 
