--- a/nginx.conf
+++ b/nginx.conf
@@ -13,19 +13,24 @@ http {
     default_type  application/octet-stream;
 
     upstream api-server {
-        server server:3000;
+        server app:3000;  # Изменено с server:3000 на app:3000
         keepalive 100;
     }
 
     server {
         listen 80;
-        server_name localhost;
+        server_name ai-server-express-u14194.vm.elestio.app;  # Обновлено
 
         location / {
-		proxy_http_version 1.1;
-            	proxy_pass         http://api-server;
+            proxy_http_version 1.1;
+            proxy_pass         http://api-server;
+            
+            # Добавляем важные заголовки
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
-
     }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
