--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,35 @@
 version: "3.9"
 
 services:
+  app:
+    container_name: ai-server-express
+    build:
+      context: ./
+      dockerfile: Dockerfile.dev
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+      # Удаляем монтирование логов
+    environment:
+      - NODE_ENV=development
+      - PORT=3000
+      - LOG_DIR=/tmp/logs  # Изменяем директорию логов
+      - SECRET_KEY=secretKey
+      - CREDENTIALS=true
+      - ORIGIN=*
+      - LOG_FORMAT=combined
+    user: "node"  # Запускаем от пользователя node
+    restart: 'unless-stopped'
+
   proxy:
     container_name: proxy
     image: nginx:alpine
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app
     restart: "unless-stopped"
-    networks:
-      - backend
-
-  app:
-    container_name: ai-server-express
-    build:
-      context: ./
-      dockerfile: Dockerfile.prod
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./logs:/app/logs
-    environment:
-      - NODE_ENV=production
-      - PORT=3000
-      - LOG_DIR=/app/logs
-      - SECRET_KEY=secretKey
-      - CREDENTIALS=true
-      - ORIGIN=*
-      - LOG_FORMAT=combined
-    restart: 'unless-stopped'
-    networks:
-      - backend
-
-networks:
-  backend:
-    driver: bridge
