--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,31 +5,31 @@ services:
     container_name: ai-server-express
     build:
       context: ./
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.prod
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
-      # Удаляем монтирование логов
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - PORT=3000
-      - LOG_DIR=/tmp/logs  # Изменяем директорию логов
-      - SECRET_KEY=secretKey
+      - LOG_DIR=/app/logs
+      - SECRET_KEY=${SECRET_KEY}
       - CREDENTIALS=true
-      - ORIGIN=*
+      - ORIGIN=https://ai-server-express-u14194.vm.elestio.app
       - LOG_FORMAT=combined
-    user: "node"  # Запускаем от пользователя node
-    restart: 'unless-stopped'
+    restart: always
 
   proxy:
     container_name: proxy
     image: nginx:alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    environment:
+      - DOMAIN=ai-server-express-u14194.vm.elestio.app
     depends_on:
       - app
-    restart: "unless-stopped"
+    restart: always
