--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
-    "@grammyjs/conversations": "^1.2.0",
     "@supabase/supabase-js": "^2.47.10",
+    "@types/multer": "^1.4.12",
     "axios": "^1.7.9",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -29,6 +29,7 @@
     "elevenlabs": "^0.16.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.5.1",
     "form-data": "^4.0.1",
     "grammy": "^1.34.0",
     "helmet": "^5.1.1",
@@ -36,8 +37,9 @@
     "jest-mock": "^29.7.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "openai": "^4.77.0",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "replicate": "^0.32.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
@@ -54,7 +56,7 @@
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/hpp": "^0.2.2",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
