--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,13 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            add_header 'Access-Control-Allow-Origin' 'https://replicate.com' always;
+            add_header 'Access-Control-Allow-Methods' 'GET' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
         }
     }
 
